--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,7 @@
 
 test:
 	cppcheck ../
-	gcc -pedantic-errors -Wall -g -Werror -I../ ../callback_tester.c test.c -o demo
+	gcc -g -pedantic-errors -Wall -g -Werror -I../ ../callback_tester.c test.c -o demo
 	valgrind --track-origins=yes valgrind --leak-check=full -q ./demo
 	./demo
 
